--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,7 +9,7 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+
  <div id="demo" class="carousel slide" data-ride="carousel">
   <ul class="carousel-indicators">
     <li data-target="#demo" data-slide-to="0" class="active"></li>
@@ -18,24 +18,24 @@
   </ul>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="{{ asset('images/lb1.jpg') }}" alt="Los Angeles" width="100" height="30">
+      <img src="https://www.toutelaphilo.com/wp-content/uploads/2022/07/philosophie-liberte.png" alt="Los Angeles" width="100" height="30">
       <div class="carousel-caption">
-        <h3>Los Angeles</h3>
-        <p>We had such a great time in LA!</p>
+        <h3>Diversité et inclusion</h3>
+        <p>La diversité valorise les différences individuelles, tandis que l'inclusion assure une participation équitable de tous, créant des environnements respectueux et intégratifs pour un développement harmonieux de la société.</p>
       </div>   
     </div>
     <div class="carousel-item">
       <img src="{{ asset('images/lb2.png') }}" alt="Chicago" width="100" height="30">
       <div class="carousel-caption">
-        <h3>Chicago</h3>
-        <p>Thank you, Chicago!</p>
+        <h3>Pensée libre</h3>
+        <p>La pensée libre est la capacité de penser de manière indépendante, sans être influencé par les dogmes, les préjugés ou les pressions sociales!</p>
       </div>   
     </div>
     <div class="carousel-item">
       <img src="{{ asset('images/lb3.png') }}" alt="New York" width="100" height="30">
       <div class="carousel-caption">
-        <h3>New York</h3>
-        <p>We love the Big Apple!</p>
+        <h3 class="text-info">Changements sociaux </h3>
+        <p class="text-success bold">Les changements sociaux reflètent les transformations des structures et valeurs d'une société, influencées par des facteurs comme l'innovation technologique et les mouvements politiques, tels que le féminisme et Black Lives Matter!</p>
       </div>   
     </div>
   </div>
